Formatando data de nascimento.

--- a/ASP.NET Core Expert/ASP.NET MVC/MVC.FormLab/Views/Aluno/Detalhes.cshtml
+++ b/ASP.NET Core Expert/ASP.NET MVC/MVC.FormLab/Views/Aluno/Detalhes.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(m => m.DataNascimento)
         </dt>
         <dd>
-            @Html.DisplayFor(m => m.DataNascimento)
+            @Html.DisplayFor(m => m.DataNascimentoFormatada)
         </dd>
 
         <dt>
