--- a/ASP.NET Core Expert/ASP.NET MVC/Lab.MVC.ConhecimentosEssenciais/src/Lab.MVC.ConhecimentoEssenciais.AppSemTemplate/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core Expert/ASP.NET MVC/Lab.MVC.ConhecimentosEssenciais/src/Lab.MVC.ConhecimentoEssenciais.AppSemTemplate/Views/Shared/_Layout.cshtml
@@ -12,6 +12,9 @@
     <environment exclude="Development">
         <link rel="stylesheet" href="~/css/site.min.css" />
     </environment>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
     </head>
     <body>
     <header>
@@ -47,5 +50,7 @@
     </footer>
 
     <script src="~/lib/bootstrap/bootstrap.min.js"></script>
+
+    @await RenderSectionAsync("Scripts", required: false);
     </body>
 </html>
