--- a/ASP.NET Core Expert/ASP.NET MVC/Lab.MVC.ConhecimentosEssenciais/src/Lab.MVC.ConhecimentoEssenciais.AppSemTemplate/Views/Produtos/Index.cshtml
+++ b/ASP.NET Core Expert/ASP.NET MVC/Lab.MVC.ConhecimentosEssenciais/src/Lab.MVC.ConhecimentoEssenciais.AppSemTemplate/Views/Produtos/Index.cshtml
@@ -56,3 +56,6 @@
 }
     </tbody>
 </table>
+
+<vc:contador contagem-model="@Model.Count()"></vc:contador>
+@* @await Component.InvokeAsync("Counter", Model.Count()) *@
