--- a/Angular/DESENV/TodoList/todo-list-app/src/app/app.html
+++ b/Angular/DESENV/TodoList/todo-list-app/src/app/app.html
@@ -3,19 +3,26 @@
 
   <div class="row">
     <div class="col-lg-6">
-      <form class="mt-3" (submit)="onSubmit($event)">
+      <form [formGroup]="form" class="mt-3" (submit)="onSubmit($event)">
+        
+        <input type="hidden" formControlName="id">
+        
         <div>
           <label for="txtTitle" class="form-label">Título</label>
-          <input type="text" id="txtTitle" name="Title" class="form-control">
+          <input type="text" id="txtTitle" formControlName="title" class="form-control">
         </div>
          <div>
           <label for="txtDescription" class="form-label">Descrição</label>
-          <input type="text" id="txtDescription" name="Description" class="form-control">
+          <input type="text" id="txtDescription"  formControlName="description" class="form-control">
         </div>
 
         <div class="mt-2">
-          <button class="btn btn-success me-2" type="submit">Cadastrar</button>
-          <button class="btn btn-danger" type="reset">Limpar</button>
+          <button class="btn btn-success me-2" type="submit"> 
+            {{isEditing() ?  "Editar" : "Cadastrar" }} 
+          </button>
+          <button class="btn btn-danger" type="button" (click)="onCancelClick()">
+            {{isEditing() ?  "Cancelar Edição" : "Limpar" }}
+          </button>
         </div>
       </form>
     </div>
@@ -30,7 +37,7 @@
               </div>
 
               <div class="col-lg-6 d-flex flex-row justify-content-end align-items-end">
-                <button class="btn btn-primary me-2" >Editar</button>
+                <button class="btn btn-primary me-2" (click)="onEditClick(todoItem)">Editar</button>
                 <button class="btn btn-danger" (click)="onDeleteClick(todoItem.id)">Excluir</button>
               </div>
             </div>
